# unl-schnablelab

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: linting.yml  test_cli_gc.yml  test_gc.yml  update_gh_page.yml
docker/: schnablelab.dockerfile
docs/: gc_tutorial.md  index.md  installation.md
gc_tutorial/: index.html
installation/: index.html
search/: search_index.json
src/schnablelab/GC/: __main__.py  base.py  corrector.py  data_qc.py
src/schnablelab/GC/data/: F2_X0.45miss0.35.map  F2_simulated.map  RIL_Medicago.map  RIL_X0.4miss0.35.map  add_false_gt.py  add_miss.py  cal_correct_rate_papaya_F2.py  concise_markers_name.py  config.txt  mstmap.LGs.txt  simulate_F2_population.py  stat_accuracy.py
src/schnablelab/apps/: base.py  natsort.py  plink  tools.py
src/schnablelab/apps/tassel-5-standalone/: start_tassel.pl
src/schnablelab/autoGWAS/: __main__.py  base.py  data_pipeline.py  gwas.py  post_gwas.py
src/schnablelab/dl/: __main__.py  base.py  dataloader.py  train.py
src/schnablelab/genotyping/: __main__.py  base.py  post_snp_calling.py  pre_snp_calling.py  snp_calling.py
src/schnablelab/hcc/: __main__.py  job.py  request.py  traverse.py
src/schnablelab/phenotyping/: __main__.py  base.py  extract_traits.py  htp.py  htp_data.py  plot_growth_curve.py  plot_timeseries.py
src/schnablelab/zooniverse/: __main__.py  base.py  zookeeper.py  zootils.py
tests/: gc_test.py  test_gc.py
