[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "schnablelab"
version = "1.0.0"
description = "GWAS piepline & High Throughput Phenotyping related codes developed in the Schnable Lab at UNL"
authors = [
  {name = "Chenyong Miao"},
  {name = "Alejandro D Pages"},
  {name = "James Schnable", email = "schnable@unl.edu"},
]
readme = "README.md"
requires-python = "== 3.10"
keywords = ["GWAS Pipeline", "Phenotying", "UNL-HCC", "SNP Calling Pipeline", "Zooniverse"]
license = {file = "LICENSE"}

maintainers = [
  {name = "Chenyong Miao"},
  {name = "James Schnable", email = "schnable@unl.edu"},
]

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "tqdm",
  "scikit-image",
  "opencv-python",
  "imutils",
]

[project.optional-dependencies]
deep_learning = ["torch"]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/chenyong89/unl-schnablelab/tree/maint"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]